New fn ReadOutput() implemented in examples

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -445,9 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SiteFilepath = os.path.join(inputs['filepath'], sitename)\n",
-    "with open(os.path.join(SiteFilepath, sitename + '_output.pkl'), 'rb') as f:\n",
-    "    output = pickle.load(f)\n",
+    "output, output_latlon, output_proj = Toolbox.ReadOutput(inputs)\n",
     "\n",
     "# Remove Duplicate Lines\n",
     "# For images taken on the same date by the same satellite, keep only the longest line\n",
