--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -497,8 +497,9 @@
     "DistanceInland = 100\n",
     "DistanceOffshore = 100\n",
     "\n",
-    "# provide average beach slope for site, for calculating corrected beach widths\n",
-    "beachslope = 0.02 "
+    "# Provide average beach slope (tanBeta) for site, for calculating corrected beach widths\n",
+    "# Set to 'None' if you want to use CoastSat.slope to calculate per-transect slopes for correcting with\n",
+    "beachslope = None"
    ]
   },
   {
@@ -599,7 +600,7 @@
     "        TransectInterGDFWater = pickle.load(f)\n",
     "else:        \n",
     "    if settings['wetdry'] == True:\n",
-    "        TransectInterGDFWater = Transects.GetBeachWidth(BasePath, TransectGDF, TransectInterGDF, WaterlineGDF, settings, output, beachslope)  \n",
+    "        TransectInterGDFWater = Transects.GetWaterIntersections(BasePath, TransectGDF, TransectInterGDF, WaterlineGDF, settings, output, beachslope)  \n",
     "        TransectInterGDFWater = Transects.SaveWaterIntersections(TransectInterGDFWater, WaterlineGDF,  BasePath, sitename)\n",
     "    \n",
     "    with open(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_water_intersects.pkl'), 'wb') as f:\n",
