Updated tidelatlon setting in example drivers

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -362,7 +362,7 @@
     "if wetdry is True:\n",
     "    tidepath = \"/path/to/your/FES2014/files/aviso-fes/data/fes2014\"\n",
     "    daterange = dates\n",
-    "    tidelatlon = [lonmax,latmax-(2/latmin)] # seaward edge, halfway between S and N\n",
+    "    tidelatlon = [(latmin+latmax)/2, (lonmin+lonmax)/2] # centre of bounding box\n",
     "    Toolbox.ComputeTides(settings,tidepath,daterange,tidelatlon) "
    ]
   },
