Updating example drivers with runup options

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -579,11 +579,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18a5bbcd",
+   "metadata": {},
+   "source": [
+    "### Transect-Waves Intersections\n",
+    "Create (or load existing) a GeoDataFrame holding intersections with topographic data along each transect. This is for comparing veg edge positions with nearshore wave conditions at the time the image was taken. NOTE: this requires you to have a Copernicus Marine Service (CMEMS) account with access to their hindcast model, as you will be asked for a username and password. This should also be run before the waterline intersections if you want to include runup in your tidal corrections."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aba62430",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.isfile(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_wave_intersects.pkl')):\n",
+    "    print('Transect Intersect + Wave GDF exists and was loaded')\n",
+    "    with open(os.path.join\n",
+    "              (filepath , sitename, 'intersections', sitename + '_transect_wave_intersects.pkl'), 'rb') as f:\n",
+    "        TransectInterGDFWave = pickle.load(f)\n",
+    "else:\n",
+    "    TransectInterGDFWave = Transects.WavesIntersect(settings, TransectInterGDF, output, lonmin, lonmax, latmin, latmax)\n",
+    "    \n",
+    "    with open(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_wave_intersects.pkl'), 'wb') as f:\n",
+    "        pickle.dump(TransectInterGDFWave, f)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "27ffb709",
    "metadata": {},
    "source": [
     "### Transect-Water Intersections\n",
-    "Create (or load existing) a GeoDataFrame holding intersections with waterlines along each transect. This is for comparing shoreline change with vegetation change, and for quantifying the beach width between the two for each image."
+    "Create (or load existing) a GeoDataFrame holding intersections with waterlines along each transect. This is for comparing shoreline change with vegetation change, and for quantifying the beach width between the two for each image. If you would like to include runup in your waterline corrections, add `TransectInterGDFWave` to `GetWaterIntersections()`:\n",
+    "\n",
+    "```TransectInterGDFWater = Transects.GetWaterIntersections(BasePath, TransectGDF, TransectInterGDF, WaterlineGDF, settings, output, TransectInterGDFWave, beachslope)```\n",
+    "\n",
+    "If you want to include runup AND calculate slopes using CoastSat.slope (recommended), exclude the `beachslope` variable:\n",
+    "\n",
+    "`TransectInterGDFWater = Transects.GetWaterIntersections(BasePath, TransectGDF, TransectInterGDF, WaterlineGDF, settings, output, TransectInterGDFWave)`"
    ]
   },
   {
@@ -638,34 +672,6 @@
     "    \n",
     "    with open(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_topo_intersects.pkl'), 'wb') as f:\n",
     "        pickle.dump(TransectInterGDFTopo, f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7ba502d",
-   "metadata": {},
-   "source": [
-    "### Transect-Waves Intersections\n",
-    "Create (or load existing) a GeoDataFrame holding intersections with topographic data along each transect. This is for comparing veg edge positions with nearshore wave conditions at the time the image was taken. NOTE: this requires you to have a Copernicus Marine Service (CMEMS) account with access to their hindcast model, as you will be asked for a username and password."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd9cf3c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.isfile(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_wave_intersects.pkl')):\n",
-    "    print('Transect Intersect + Wave GDF exists and was loaded')\n",
-    "    with open(os.path.join\n",
-    "              (filepath , sitename, 'intersections', sitename + '_transect_wave_intersects.pkl'), 'rb') as f:\n",
-    "        TransectInterGDFWave = pickle.load(f)\n",
-    "else:\n",
-    "    TransectInterGDFWave = Transects.WavesIntersect(settings, TransectInterGDF, output, lonmin, lonmax, latmin, latmax)\n",
-    "    \n",
-    "    with open(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_wave_intersects.pkl'), 'wb') as f:\n",
-    "        pickle.dump(TransectInterGDFWave, f)\n"
    ]
   },
   {
