Toolbox.py getting very long; moved all metadata related functions to Download.py and updated example drivers

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -293,8 +293,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sat = Toolbox.LocalImageRetrieval(inputs)\n",
-    "metadata = Toolbox.LocalImageMetadata(inputs, Sat)"
+    "# If you want to include Landsat 7 but DON'T want to include Scan Line Corrector affected images, set SLC=False\n",
+    "Sat = Download.RetrieveImages(inputs, SLC=True)\n",
+    "metadata = Download.CollectMetadata(inputs, Sat)"
    ]
   },
   {
