Addressing https://github.com/fmemuir/COASTGUARD/issues/27 with new order of Transects functions (waterline -> waves -> wave-based waterline corrections)

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -580,11 +580,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27ffb709",
+   "metadata": {},
+   "source": [
+    "### Transect-Water Intersections\n",
+    "Create (or load existing) a GeoDataFrame holding intersections with waterlines along each transect. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26c15322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.isfile(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_water_intersects.pkl')):\n",
+    "    print('Transect Intersect + Water GDF exists and was loaded')\n",
+    "    with open(os.path.join\n",
+    "              (filepath , sitename, 'intersections', sitename + '_transect_water_intersects.pkl'), 'rb') as f:\n",
+    "        TransectInterGDFWater = pickle.load(f)\n",
+    "else:        \n",
+    "    if settings['wetdry'] == True:\n",
+    "        TransectInterGDFWater = Transects.GetWaterIntersections(BasePath, TransectGDF, TransectInterGDF, WaterlineGDF, settings, output)  \n",
+    "    \n",
+    "    with open(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_water_intersects.pkl'), 'wb') as f:\n",
+    "        pickle.dump(TransectInterGDFWater, f)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "18a5bbcd",
    "metadata": {},
    "source": [
     "### Transect-Waves Intersections\n",
-    "Create (or load existing) a GeoDataFrame holding intersections with topographic data along each transect. This is for comparing veg edge positions with nearshore wave conditions at the time the image was taken. NOTE: this requires you to have a Copernicus Marine Service (CMEMS) account with access to their hindcast model, as you will be asked for a username and password. This should also be run before the waterline intersections if you want to include runup in your tidal corrections."
+    "Create (or load existing) a GeoDataFrame holding intersections with topographic data along each transect. This is for comparing veg edge positions with nearshore wave conditions at the time the image was taken. NOTE: this requires you to have a Copernicus Marine Service (CMEMS) account with access to their hindcast model, as you will be asked for a username and password. This should also be run before the tidal corrections and beach with steps if you want to include runup in your corrections."
    ]
   },
   {
@@ -594,25 +623,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "if os.path.isfile(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_wave_intersects.pkl')):\n",
     "    print('Transect Intersect + Wave GDF exists and was loaded')\n",
     "    with open(os.path.join\n",
     "              (filepath , sitename, 'intersections', sitename + '_transect_wave_intersects.pkl'), 'rb') as f:\n",
     "        TransectInterGDFWave = pickle.load(f)\n",
     "else:\n",
-    "    TransectInterGDFWave = Transects.WavesIntersect(settings, TransectInterGDF, output, lonmin, lonmax, latmin, latmax)\n",
+    "    TransectInterGDFWave = Transects.WavesIntersect(settings, TransectInterGDF, BasePath, output, lonmin, lonmax, latmin, latmax)\n",
     "    \n",
     "    with open(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_wave_intersects.pkl'), 'wb') as f:\n",
-    "        pickle.dump(TransectInterGDFWave, f)\n"
+    "        pickle.dump(TransectInterGDFWave, f)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "27ffb709",
+   "id": "b7b47cc8",
    "metadata": {},
    "source": [
-    "### Transect-Water Intersections\n",
-    "Create (or load existing) a GeoDataFrame holding intersections with waterlines along each transect. This is for comparing shoreline change with vegetation change, and for quantifying the beach width between the two for each image. If you would like to include runup in your waterline corrections, add `TransectInterGDFWave` to `GetWaterIntersections()`:\n",
+    "### Additional wave-based WL metrics\n",
+    "This is for comparing shoreline change with vegetation change, and for quantifying the beach width between the two for each image. If you would like to include runup in your waterline corrections, add `TransectInterGDFWave` to `GetWaterIntersections()`:\n",
     "\n",
     "```TransectInterGDFWater = Transects.GetWaterIntersections(BasePath, TransectGDF, TransectInterGDF, WaterlineGDF, settings, output, TransectInterGDFWave, beachslope)```\n",
     "\n",
@@ -624,20 +654,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bee61b2",
+   "id": "783dd34d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.isfile(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_water_intersects.pkl')):\n",
-    "    print('Transect Intersect + Water GDF exists and was loaded')\n",
-    "    with open(os.path.join\n",
-    "              (filepath , sitename, 'intersections', sitename + '_transect_water_intersects.pkl'), 'rb') as f:\n",
-    "        TransectInterGDFWater = pickle.load(f)\n",
-    "else:        \n",
-    "    if settings['wetdry'] == True:\n",
-    "        TransectInterGDFWater = Transects.GetWaterIntersections(BasePath, TransectGDF, TransectInterGDF, WaterlineGDF, settings, output, beachslope)  \n",
-    "        TransectInterGDFWater = Transects.SaveWaterIntersections(TransectInterGDFWater, WaterlineGDF,  BasePath, sitename)\n",
-    "    \n",
+    "\n",
+    "if 'wlcorrdist' not in TransectInterGDFWater.columns:\n",
+    "    # Tidal correction to get corrected distances along transects\n",
+    "    TransectInterGDFWater = Transects.WLCorrections(settings, output, TransectInterGDFWater, TransectInterGDFWave)     \n",
+    "    # Calculate width between VE and corrected WL\n",
+    "    TransectInterGDFWater = Transects.CalcBeachWidth(settings, TransectGDF, TransectInterGDFWater)\n",
+    "    # Calculate rates of change on corrected WL and save as Transects shapefile\n",
+    "    TransectInterGDFWater = Transects.SaveWaterIntersections(TransectInterGDFWater, WaterlineGDF,  BasePath, sitename)\n",
     "    with open(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_water_intersects.pkl'), 'wb') as f:\n",
     "        pickle.dump(TransectInterGDFWater, f)"
    ]
