Updated docs in example drivers for ComputeTides

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -348,9 +348,11 @@
    "metadata": {},
    "source": [
     "### <font color='red'>Tidal Information</font>\n",
-    "Compute tides from FES2014 data which is downloaded from the pyFES server. Only relevant for shoreline processing (as it is used to correct for the effects of tides on the cross-shore waterline position). \n",
+    "Compute tides from FES2014 or FES2022 data which is downloaded from the pyFES server. Only relevant for shoreline processing (as it is used to correct for the effects of tides on the cross-shore waterline position). \n",
     "\n",
-    "(ONLY RUN IF YOU HAVE pyFES INSTALLED AND WANT TIDAL INFO SAVED. If you do, change `tidepath` to the path to your aviso-fes folder)"
+    "(ONLY RUN IF YOU HAVE `pyfes` INSTALLED AND WANT TIDAL INFO SAVED. If you do, change `tidepath` to the path to your `aviso-fes` folder, see the README for details)\n",
+    "\n",
+    "Note: FES2022 is more accurate than FES2014 but takes several minutes longer to compute."
    ]
   },
   {
@@ -361,7 +363,7 @@
    "outputs": [],
    "source": [
     "if wetdry is True:\n",
-    "    tidepath = \"/path/to/your/FES2014/files/aviso-fes/data/fes2014\"\n",
+    "    tidepath = \"/path/to/your/aviso-fes/data/fes2014\"\n",
     "    daterange = dates\n",
     "    tidelatlon = [(latmin+latmax)/2, (lonmin+lonmax)/2] # centre of bounding box\n",
     "    Toolbox.ComputeTides(settings,tidepath,daterange,tidelatlon) "
