ComputeTides now takes tideoutpath (removed redundancy)

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -363,10 +363,13 @@
    "outputs": [],
    "source": [
     "if wetdry is True:\n",
-    "    tidepath = \"/path/to/your/aviso-fes/data/fes2014\"\n",
+    "    tidepath = \"../aviso-fes/data/fes2014\"\n",
+    "    tideoutpath = os.path.join(settings['inputs']['filepath'],'tides',\n",
+    "                            settings['inputs']['sitename']+'_tides_'+\n",
+    "                            settings['inputs']['dates'][0]+'_'+settings['inputs']['dates'][1]+'.csv')\n",
     "    daterange = dates\n",
     "    tidelatlon = [(latmin+latmax)/2, (lonmin+lonmax)/2] # centre of bounding box\n",
-    "    Toolbox.ComputeTides(settings,tidepath,daterange,tidelatlon) "
+    "    Toolbox.ComputeTides(settings,tidepath,tideoutpath,daterange,tidelatlon) "
    ]
   },
   {
