Forgot to update templates with new Download functions (https://github.com/fmemuir/COASTGUARD/issues/30)

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -270,8 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sat = Toolbox.image_retrieval(inputs)\n",
-    "metadata = Toolbox.metadata_collection(inputs, Sat)"
+    "Sat = Download.RetrieveImages(inputs)\n",
+    "metadata = Download.CollectMetadata(inputs, Sat)"
    ]
   },
   {
@@ -294,7 +294,7 @@
    "outputs": [],
    "source": [
     "# If you want to include Landsat 7 but DON'T want to include Scan Line Corrector affected images, set SLC=False\n",
-    "Sat = Download.RetrieveImages(inputs, SLC=True)\n",
+    "Sat = Download.RetrieveImages(inputs, SLC=False)\n",
     "metadata = Download.CollectMetadata(inputs, Sat)"
    ]
   },
