Addition of ee.Authenticate() (for https://github.com/fmemuir/COASTGUARD/issues/32)

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -46,7 +46,8 @@
     "import geopandas as gpd\n",
     "import geemap\n",
     "\n",
-    "ee.Initialize()"
+    "ee.Initialize()\n",
+    "ee.Authenticate() # should only need to be run the first time after installation"
    ]
   },
   {
